--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,73 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Welcome to Stable"
+description: "A stablechain powered by USDT — Designed to move stablecoins at scale, because the world’s most used asset deserves its own chain."
 ---
 
-## Setting up
+<img src="/images/stable-banner.avif"/>
 
-Get your documentation site up and running in minutes.
+Welcome to the official documentation for **Stable**.
 
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
+With over $190 billion in circulation and more than 350 million users globally, USDT leads the stablecoin market, powering centralized exchanges, decentralized finance (DeFi), and international payments. Yet, current infrastructure struggles to meet increasing demands for lower costs, higher speeds, and greater reliability.
 
-## Make it yours
+Stable addresses these demands through a scalable, secure, and user-friendly blockchain specifically crafted for USDT’s practical needs. Whether serving retail users in emerging markets or financial institutions handling substantial transaction volumes, Stable delivers an optimal environment to make transactions faster, cheaper, and significantly more efficient.
 
-Design a docs site that looks great and empowers your users.
+Stable allows this with a high-throughput Layer 1 blockchain with sub-second finality, designed to serve as the asset issuance and settlement layer for USDT. Some of the key features include:
+
+
+- **Optimized for USDT:** Stable provides comprehensive USDT-focused features including optimized large scale USDT transfers and efficient USDT issuance and settlement capabilities.
+- **Built for Everyday Usage:** Transactions finalize in under a second with minimal costs. Stable’s intuitive wallet simplifies sending, receiving, and asset management while enabling easy debit and credit card integrations.
+- **Custom features for Enterprise:** Stable provides advanced features designed for institutional needs. It offers guaranteed blockspace allocation, efficient USDT transaction processing, high throughput capabilities with transfer aggregation, and comprehensive security measures. The platform also includes confidential transfer features that balance privacy with regulatory compliance.
+
+## Getting Started
+
+This guide serves everyone — everyday users, developers, or institutions — we’ve got you.
 
 <Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
+    <Card title="Why Stable" icon="feather" href="/whyStable">
+        High performance stablechain using USDT as native gas token
+    </Card>
+    <Card title="Stable for Users" icon="user" href="/stableForUsers">
+        Discover how Stable enhances your everyday life
+    </Card>
+    <Card title="Technical Roadmap" icon="code" href="/technicalRoadmap">
+        Learn more about Stable’s technical roadmap
+    </Card>
+    <Card title="FAQ" icon="question" href="/faq">
+        Frequently asked questions about Stable
+    </Card>
+</Columns>
+
+## About Stable Technology
+
+Dive into Stable’s technology and its key features.
+
+<Columns cols={2}>
     <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
+        title="Tech Overview"
+        icon="network-wired"
+        href="/development"
+    >
+        Explore Stable’s cutting-edge technology
+    </Card>
+    <Card
+        title="Key Features"
+        icon="wand-sparkles"
+        href="/essentials/settings"
+    >
+        Uncover Stable’s standout capabilities
+    </Card>
+    <Card
+        title="Core Optimization"
+        icon="bolt"
+        href="/essentials/navigation"
+    >
+        Core optimizations that will make Stable high-performance
+    </Card>
+    <Card
+        title="USDT-Specific Features"
+        icon="dollar-sign"
+        href="/api-reference/introduction"
+    >
+        Features designed specifically for USDT transactions
+    </Card>
 </Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
